k8s/deployment-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hellokubernetes-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hellokubernetes-postgres
  template:
    metadata:
      labels:
        app: hellokubernetes-postgres
    spec:
      containers:
        - name: hellokubernetes-postgres
          image: postgres:11.1
          ports:
            - containerPort: 5432 
          volumeMounts:
            - name: hellokubernetes-persistent-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: hellokubernetes-persistent-storage
          persistentVolumeClaim:
            claimName: hellokubernetes-volumeclaim
