k8s/service-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  type: ClusterIP
  ports:
    - port: 5432
  selector:
    app: hellokubernetes-postgres
