k8s/service-node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: hellokubernetes
spec:
  selector:
    app: hellokubernetes
  type: NodePort
  ports:
  - port: 3000
