k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hellokubernetes
spec:
  selector:
    app: hellokubernetes
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 3000
