k8s/service-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hellokubernetes
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "web-static-ip"
spec:
  tls:
  - hosts:
    - larkintuckerllc.com
    - www.larkintuckerllc.com
    secretName: hellokubernetes-tls
  backend:
    serviceName: hellokubernetes
    servicePort: 3000
